cmake_minimum_required(VERSION 2.8)



project(mytest VERSION 1.2.3.4)


MESSAGE(WARNING   "PROJECT_NAME=${PROJECT_NAME}")    #带警告的输出
MESSAGE(STATUS   "PROJECT_NAME===${PROJECT_NAME}")     #正常输出


message( STATUS "PROJECT_VERSION_MAJOR = ${PROJECT_VERSION_MAJOR}" )
message( STATUS "PROJECT_VERSION_MINOR = ${PROJECT_VERSION_MINOR}" )
#message( STATUS "PROJECT_VERSION_PATCH = ${PROJECT_VERSION_PATCH}" )
#message( STATUS "PROJECT_VERSION_TWEAK = ${PROJECT_VERSION_TWEAK}" )
#message( STATUS "PROJECT_HOMEPAGE_URL = ${PROJECT_HOMEPAGE_URL}")
#message( STATUS "CMAKE_PROJECT_DESCRIPTION = ${CMAKE_PROJECT_DESCRIPTION}" )

add_executable("${PROJECT_NAME}" main.c)

